added nav bar with 2 pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>First Revature Webpage</title>
+    </head>
     <body>
-        <p>Hello World</p>
-        <p>cool app!</p>
+        <header>
+            <nav>
+                <a href="secondpage.html">2nd page</a>
+                <a href="components/thirdpage.html">3rd page</a>
+            </nav>  
+        </header>
     </body>
 </html>
