--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
                 <a href="components/thirdpage.html">3rd page</a>
             </nav>  
         </header>
+        <footer>
+            <p>cool footer, bro</p>
+        </footer>
     </body>
 </html>
