playing with the styling

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     </head>
     <body>
         <header>
+            <p class="coolheader">cool header, bro</p>
             <nav>
+                <p id="coolbar">cool navbar, bro</p>
                 <a href="secondpage.html">2nd page</a>
                 <a href="components/thirdpage.html">3rd page</a>
             </nav>  
         </header>
         <footer>
             <p>cool footer, bro</p>
+            <p class="coolheader">not the footer</p>
         </footer>
     </body>
 </html>
